--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clase-3",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "dev": "node --watch app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.19.2",
     "zod": "3.23.8"
   }
